--- a/source/index.html
+++ b/source/index.html
@@ -55,8 +55,8 @@
               <div class="basket__wrapper">
                 <div class="basket__wrapperButton borderCheckbox">
                   <div class="basket__wrapperCheckbox">
-                    <input class="basket__input" id="Choose all" type="checkbox" name="Choose all" checked />
-                    <label class="basket__label" for="Choose all">Выбрать все</label>
+                    <input class="basket__input" id="Choose-all" type="checkbox" name="Choose-all" checked />
+                    <label class="basket__label" for="Choose-all">Выбрать все</label>
                   </div>
                   <div class="basket__summaryText">
                     <p class="basket__text"><span class="basket__quantity">3 товара</span> · <span class="basket__summary"></span></p>
@@ -187,13 +187,13 @@
               <form class="recipient__form">
                 <div class="recipient__wrapper">
                   <div class="recipient__wrapper-label">
-                    <label class="recipient__label" for="name">Имя</label>
+                    <label class="recipient__label">Имя</label>
                     <div class="recipient__inputBox">
                       <input data-type="name" class="recipient__input inputWidth" placeholder="Имя" type="text"/>
                     </div>
                   </div>
                   <div class="recipient__wrapper-label">
-                    <label class="recipient__label" for="surname">Фамилия</label>
+                    <label class="recipient__label">Фамилия</label>
                     <div class="recipient__inputBox">
                       <input data-type="surname" class="recipient__input inputWidth" placeholder="Фамилия" type="text"/>
                     </div>
@@ -201,20 +201,20 @@
                 </div>
                 <div class="recipient__wrapper">
                   <div class="recipient__wrapper-label">
-                    <label class="recipient__label" for="email">Электронная почта</label>
+                    <label class="recipient__label">Электронная почта</label>
                     <div class="recipient__inputBox">
                       <input data-type="email" class="recipient__input" placeholder="Почта" type="email"/>
                     </div>
                   </div>
                   <div class="recipient__wrapper-label">
-                    <label class="recipient__label" for="phone">Телефон</label>
+                    <label class="recipient__label">Телефон</label>
                     <div class="recipient__inputBox">
                       <input data-type="phone" data-format="+* *** *** ** **" class="recipient__input" placeholder="Телефон" id="phone" maxlength="30" type="tel"/>
                     </div>
                   </div>
                   <div class="recipient__wrapper-custom">
                     <div class="recipient__wrapper-label">
-                      <label class="recipient__label" for="document">ИНН для таможни</label>
+                      <label class="recipient__label">ИНН для таможни</label>
                       <div class="recipient__inputBox">
                         <input data-type="number" class="recipient__input" placeholder="ИНН" type="number"/>
                       </div>
@@ -271,7 +271,7 @@
             </div>
             <span class="summary__span">Спишем оплату с карты при получении</span>
           </div>
-          <button class="summary__button" type="submit">Заказать</button>
+          <button class="summary__button">Заказать</button>
           <div class="summary__agreement">
             <span class="summary__span widthAgreement">Соглашаюсь <span class="borderBottom">с правилами пользования торговой площадкой</span> и <span class="borderBottom">возврата</span></span>
           </div>
